--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,20 +1,89 @@
-
-body{
-
+body {
+  display: grid;
+  place-items: center;
+  width: auto;
+  height: 100vh;
+  background-image: linear-gradient(hsl(214, 47%, 23%), hsl(237, 49%, 15%));
+  font-family: 'Barlow Semi Condensed', sans-serif;
 }
 
-.container{
-
-
-
+#root {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
 }
 
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px;
+  box-sizing: border-box;
+  width: 310px;
+  height: 100px;
+  border: 3px solid hsl(217, 16%, 45%);
+  border-radius: 6px;
+}
+
+.logo {
+  width: 50px;
+  height: 50px;
+  margin-left: 10px;
+}
+
+.score {
+  box-sizing: border-box;
+  width: 80px;
+  height: 70px;
+  background:hsl(225, 20%, 96%);
+  border: 1px solid hsl(0, 0%, 0%);
+  border-radius: 6px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  padding: 5px;
+}
+
+.score h1{
+  font-size: 0.775rem;
+  font-family: 'Barlow Semi Condensed', sans-serif;
+  color: hsl(229, 64%, 46%);;
+}
+
+.score span{
+  font-size: 2.4rem;
+  font-family: 'Barlow Semi Condensed', sans-serif;
+  color: hsl(0, 0%, 37%);
+}
+
+.rules {
+  width: 130px;
+  height: 40px;
+  border: 3px solid hsl(217, 16%, 45%);
+  border-radius: 8px;
+  color: hsl(217, 16%, 45%);
+  display: grid;
+  place-items: center;
+  font-family: 'Barlow Semi Condensed', sans-serif;
+  cursor: pointer;
+}
+
+.container {
+  width: 320px;
+  height: 320px;
+  background: url(../assets/images/bg-pentagon.svg);
+  background-repeat: no-repeat;
+  background-size: 65%;
+  background-position: center;
+}
 
 .spock-default {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background-image: linear-gradient(180deg, hsl(189, 59%, 53%), hsl(189, 58%, 57%));
+  display: grid;
+  place-items: center;
+  background-image: linear-gradient(120deg, hsl(189, 59%, 57%), hsl(189, 58%, 53%));
   box-shadow: 0px -4px hsl(189, 58%, 45%) inset;
   width: 100px;
   height: 100px;
@@ -23,37 +92,68 @@ body{
 
 .spock-default div {
   box-sizing: border-box;
-  background: #fff;
+  background: rgb(243, 243, 243);
   padding-left: 3px;
-  width: 73%;
-  height: 73%;
+  width: 75%;
+  height: 75%;
   border-radius: 999px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  display: grid;
+  place-items: center;
   box-shadow: 0px 4px rgb(218, 216, 216) inset;
 }
 
-.spock-default img{
+.spock-default img {
   width: 35px;
 }
 
 .scissors-color {
-  background-image: linear-gradient(180deg, hsl(39, 89%, 49%), hsl(40, 84%, 53%));
-  box-shadow: 0px -4px hsl(40, 84%, 45%) inset;
+  background-image: linear-gradient(120deg, hsl(40, 84%, 53%), hsl(39, 89%, 50%));
+  box-shadow: 0px -4px hsl(40, 84%, 40%) inset;
 }
 
-.papper-color {
-  background-image: linear-gradient(180deg, hsl(230, 89%, 62%), hsl(230, 89%, 65%));
+.paper-color {
+  background-image: linear-gradient(120deg, hsl(230, 89%, 65%), hsl(230, 89%, 62%));
   box-shadow: 0px -4px hsl(230, 89%, 45%) inset;
 }
 
 .rock-color {
-  background-image: linear-gradient(180deg, hsl(349, 71%, 52%), hsl(349, 70%, 56%));
+  background-image: linear-gradient(120deg, hsl(349, 71%, 56%), hsl(349, 70%, 52%));
   box-shadow: 0px -4px hsl(349, 70%, 45%) inset;
 }
 
 .lizard-color {
-  background-image: linear-gradient(180deg, hsl(261, 73%, 60%), hsl(261, 72%, 63%));
+  background-image: linear-gradient(120deg, hsl(261, 73%, 63%), hsl(261, 72%, 60%));
   box-shadow: 0px -4px hsl(261, 72%, 45%) inset;
+}
+
+/* POSITIONS BUTTONS */
+
+.scissor {
+  position: relative;
+  top: 0px;
+  left: 110px;
+}
+
+.paper {
+  position: relative;
+  top: -20px;
+  left: 220px;
+}
+
+.rock {
+  position: relative;
+  top: 5px;
+  left: 180px;
+}
+
+.lizard {
+  position: relative;
+  top: -95px;
+  left: 40px;
+}
+
+.spock {
+  position: relative;
+  top: -320px;
+  left: 0px;
 }
