--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -72,6 +72,7 @@ body {
 }
 
 .container {
+  position: relative;
   width: 320px;
   height: 320px;
   background: url(../assets/images/bg-pentagon.svg);
